force-app/main/default/objects/Ledger__c/Ledger__c.object-meta.xml
<CustomObject>
    <description>QAC - This object is used to maintain the transaction history of agency credit points.</description>
    <label>Ledger</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Ledger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ledger</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>