force-app/main/default/objects/Ledger__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QAC</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Credits_Ledger</relationshipName>
    <type>Lookup</type>
</CustomField>