force-app/main/default/objects/Ledger__c/fields/Agency_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Agency_Identifier__c</fullName>
    <description>QAC</description>
    <formula>Account__r.Qantas_Industry_Centre_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Identifier</label>
    <type>Text</type>
</CustomField>