force-app/main/default/objects/Ledger__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QAC</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Credits_Ledger</relationshipName>
    <type>Lookup</type>
</CustomField>