force-app/main/default/objects/Ledger__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QAC</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Credits_Ledger</relationshipName>
    <type>Lookup</type>
</CustomField>