force-app/main/default/objects/Ledger__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Qac</description>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adhoc Credits</fullName>
            </value>
            <value>
                <fullName>Annual Credits</fullName>
            </value>
            <value>
                <fullName>Expired Credits</fullName>
            </value>
            <value>
                <fullName>Paid Service (Online)</fullName>
            </value>
            <value>
                <fullName>Paid Service (Offline)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>