force-app/main/default/objects/Ledger__c/fields/Total_Credit_value__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_value__c</fullName>
    <description>QAC</description>
    <label>Total Credit value</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>