force-app/main/default/objects/Ledger__c/fields/Total_Outstanding_credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_credits__c</fullName>
    <description>QAC</description>
    <label>Total Outstanding credits</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>