force-app/main/default/objects/Ledger__c/fields/Transaction_date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_date__c</fullName>
    <description>Qac</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction date</label>
    <type>Date</type>
</CustomField>