force-app/main/default/objects/Ledger__c/fields/Transaction_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Frequency__c</fullName>
    <description>QAC</description>
    <label>Transaction Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adhoc</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>