force-app/main/default/objects/Ledger__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QAC</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Credits_Ledger</relationshipName>
    <type>Lookup</type>
</CustomField>