force-app/main/default/objects/Ledger__c/recordTypes/Agency_Credit.recordType-meta.xml
<RecordType>
    <fullName>Agency_Credit</fullName>
    <active>true</active>
    <description>QAC- Agency Credit record type</description>
    <label>Agency Credit</label>
</RecordType>