force-app/main/default/objects/Ledger__c/validationRules/QAC_CreditLedEntryNotAllowed_APIUser.validationRule-meta.xml
<ValidationRule>
    <fullName>QAC_CreditLedEntryNotAllowed_APIUser</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
RecordType.DeveloperName = &apos;Agency_Credit&apos;, 
ISNEW(), 
ISPICKVAL(Transaction_Type__c,&apos;Credit&apos;),
$Profile.Name = &quot;QAC API Integration Profile&quot;
)</errorConditionFormula>
    <errorMessage>Ledger Credit entry not allowed for QAC API Integration User.</errorMessage>
</ValidationRule>