force-app/main/default/objects/Ledger__c/validationRules/QAC_Ledger_CreditRT_Cannot_be_Modified.validationRule-meta.xml
<ValidationRule>
    <fullName>QAC_Ledger_CreditRT_Cannot_be_Modified</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
NOT(ISNEW()), 
ISCHANGED(RecordTypeId), 
PRIORVALUE(RecordTypeId) = $CustomMetadata.QAC_Agency_Credit_Detail__mdt.Ledger_Agency_Credit_RecordT_Id.ID__c, 
PRIORVALUE(RecordTypeId) != RecordTypeId 

)</errorConditionFormula>
    <errorMessage>You cannot change the Record type for Agency Credit Ledger.</errorMessage>
</ValidationRule>